--- a/index.html
+++ b/index.html
@@ -26,5 +26,9 @@
         <li></li>
       </ol>
     </div>
+    <script>
+      document.documentElement.style.fontSize =
+        document.documentElement.clientWidth / 7.5 + "px";
+    </script>
   </body>
 </html>
