--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
+    <title>樊智障</title>
+    <embed
+      src="./bgm/小黄人音乐库 - 公子向北走 (Live).mp3"
+      type=""
+      autostart="true"
+      loop="true"
+      hidden="true"
+    />
     <link rel="stylesheet" href="css/pic.css" />
   </head>
   <body>
